// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGroup Compact Style renders correctly 1`] = `
<div
  class="fd-input-group fd-input-group--compact"
>
  <!---->
   
  <vuecomponent-stub
    placeholder=""
    type="text"
    value=""
  />
   
  <!---->
</div>
`;

exports[`InputGroup renders correctly 1`] = `
<div
  class="fd-input-group fd-input-group--before fd-input-group--after"
>
  <span
    class="fd-input-group__addon fd-input-group__addon--before"
  >
    $
  </span>
   
  <vuecomponent-stub
    placeholder=""
    type="text"
    value=""
  />
   
  <span
    class="fd-input-group__addon fd-input-group__addon--after"
  >
    €
  </span>
</div>
`;
